# GraphDB-Lite

./: README.md
src/: CMakeLists.txt  EmbeddedGraph.cpp  EmbeddedGraph.h  egdb.cpp  egdb.h  main.cpp
src/struct/: .CMakeLists.txt.un~  .any.cpp.un~  .any.h.un~  .build.sh.un~  .buildin_string.cpp.un~  .object.h.un~  .operator_helper.h.un~  .operator_maneger.cpp.un~  .type_object.h.un~  CMakeCache.txt  CMakeLists.txt  any.cpp  any.h  build.sh  build.sh~  buildin_boolean.cpp  buildin_boolean.h  buildin_dict.cpp  buildin_dict.h  buildin_list.cpp  buildin_list.h  buildin_number.cpp  buildin_number.h  buildin_string.cpp  buildin_string.h  buildin_type.h  object.h  operator_helper.h  operator_maneger.cpp  operator_maneger.h  struct.h  type_object.h
