cmake_minimum_required(VERSION 3.3)
project(GraphDB-Lite)
find_package(boost REQUIRED)
set(CMAKE_CXX_FLAGS "-stdlib=libc++ -std=c++11 -g")
add_executable(main main.cpp)
add_executable(debug debug.cpp utils.cpp)
include_directories("./struct")
file(GLOB STRUCT ./struct/*.cpp)
include_directories("../../rapidjson/include")
add_executable(egdb egdb_test.cpp egdb.cpp ${STRUCT})
target_link_libraries(egdb libboost_regex.a libboost_graph.a)
